--- a/final_assignment_group_2.Rmd
+++ b/final_assignment_group_2.Rmd
@@ -3,26 +3,172 @@ title: "final_group_2"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r}
+library(googlesheets4)
+library(tidyverse)
+library(janitor) 
+library(skimr)
+library(countrycode) # to clean up country names
+library(broom)
+library(car)
+library(ggfortify)
+library(countrycode)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+# use googlesheets4 to get data
+url <- "https://docs.google.com/spreadsheets/d/1IPS5dBSGtwYVbjsfbaMCYIWnOuRmJcbequohNxCyGVw/edit?resourcekey#gid=1625408792"
+googlesheets4::gs4_auth() # google sheets authorisation
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+# load "Ask a A Manager 2021 Survey" googlesheet
+# https://www.askamanager.org/
+ask_a_manager_2021 <- googlesheets4::read_sheet(url) %>% 
+  janitor::clean_names()
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+skimr::skim(ask_a_manager_2021)
+
+```
+
+
+```{r}
+# How is salary distributed?
+
+ggplot(ask_a_manager_2021, aes(x=annual_salary))+
+  geom_density()
+
+
+ggplot(ask_a_manager_2021, aes(x=annual_salary))+
+  stat_ecdf()
+```
+
+```{r}
+# what about log(salary)? 
+ggplot(ask_a_manager_2021, aes(x=log(annual_salary)))+
+  geom_density()
+
+
+ggplot(ask_a_manager_2021, aes(x=log(annual_salary)))+
+  stat_ecdf()
+```
+
+```{r}
+# Which one (salary vs. log(salary)) is better to use in a regression model? Why?
+```
+
+```{r}
+# Some quick counts, groups, etc
+
+ask_a_manager_2021 %>% 
+  count(how_old_are_you, sort=TRUE) %>% 
+  mutate(percent = 100* n/sum(n))
+```
+
+```{r}
+# Industry is messy... it has > 1000 different industries  
+ask_a_manager_2021 %>% 
+  count(industry, sort=TRUE) %>% 
+  mutate(percent = 100* n/sum(n))
+```
+
+
+```{r}
+# Most of 'currency' is USD
+ask_a_manager_2021 %>% 
+  count(currency, sort=TRUE) %>% 
+  mutate(percent = 100* n/sum(n))
+
+```
+
+
+```{r}
+# 'country' 
+ask_a_manager_2021 %>% 
+  count(country, sort=TRUE) %>% 
+  mutate(percent = 100* n/sum(n))
+
+```
+
+```{r}
+# use countrycode::countryname() to clean country names
+salary_iso3 <- ask_a_manager_2021 %>% 
+  select(country) %>% 
+  pull() %>% 
+  countrycode(
+    origin = "country.name",
+    destination = "iso3c") %>% 
+  as_tibble()
+
+ask_a_manager_2021 <- bind_cols(ask_a_manager_2021, salary_iso3)
+```
+
+```{r}
+dataframe1 <- 
+  ask_a_manager_2021 %>% 
+  group_by(country) %>% 
+  count()
+```
+
+
+```{r}
+# 'city' 
+ask_a_manager_2021 %>% 
+  count(city, sort=TRUE) %>% 
+  mutate(percent = 100* n/sum(n))
+```
+
+
+```{r}
+# highest_level_of_education_completed 
+ask_a_manager_2021 %>% 
+  count(highest_level_of_education_completed) %>% 
+  mutate(percent = 100* n/sum(n))%>% 
+  arrange(desc(percent))
+```
+
+```{r}
+# gender
+ask_a_manager_2021 %>% 
+  count(gender) %>% 
+  mutate(percent = 100* n/sum(n))%>% 
+  arrange(desc(percent))
+```
+
+```{r}
+# race
+ask_a_manager_2021 %>% 
+  count(race) %>% 
+  mutate(percent = 100* n/sum(n))%>% 
+  arrange(desc(percent))
+```
+
+```{r}
+# overall_years_of_professional_experience 
+ask_a_manager_2021 %>% 
+  count(overall_years_of_professional_experience ) %>% 
+  mutate(percent = 100* n/sum(n))%>% 
+  arrange(desc(percent))
+```
+
+```{r}
+# years_of_experience_in_field  
+ask_a_manager_2021 %>% 
+  count(years_of_experience_in_field  ) %>% 
+  mutate(percent = 100* n/sum(n))%>% 
+  arrange(desc(percent))
+```
+
+
+
+
+
+
+
+
+
+
+
+
